Fix incorrect spacing in header for game page

--- a/frontend/src/css/sass/pages/_gamepage.scss
+++ b/frontend/src/css/sass/pages/_gamepage.scss
@@ -26,7 +26,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
 
         #rating-favourite-section {
             display: flex;
@@ -86,11 +86,11 @@
     }
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1300px) {
     #game-page {
         header {
             flex-direction: row;
-            align-items: center;
+            align-items: flex-start;
             gap: 1rem;
 
             h1 {
